# agent-control-plane

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
.hermes/contracts/: S-2.json  S-9.json  active.json
.hermes/contracts/history/: S-1.json
src/agent_control_plane/: __init__.py  analytics.py  auth.py  cli.py  config.py  cost_tracker.py  dashboard.py  discovery.py  drift.py  exporter.py  fingerprints.py  health.py  inventory.py  models.py  retention.py  shadow_scanner.py
src/agent_control_plane/alerts/: __init__.py  engine.py  history.py  notifications.py  rules.py
src/agent_control_plane/discovery/: __init__.py  scanner.py
src/agent_control_plane/notifications/: __init__.py  senders.py  service.py
src/agent_control_plane/templates/: 404.html  agent_detail.html  agents.html  base.html  costs.html  dashboard.html  login.html  notification_settings.html  notifications.html  shadow.html
tests/: test_analytics.py  test_auth.py  test_cli.py  test_config.py  test_cost.py  test_coverage.py  test_discovery.py  test_drift.py  test_e2e_agent_discovery.py  test_e2e_alerts.py  test_e2e_dashboard.py  test_e2e_discovery.py  test_e2e_notifications.py  test_exporter.py  test_health.py  test_inventory.py  test_shadow.py
