[project]
name = "agent-control-plane"
version = "0.1.0"
description = "AI Agent Operations Platform — discover, inventory, monitor, and track costs for AI agents across your organization"
authors = [
    {name = "iknowkungfubar", email = "hello@turintech.solutions"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
]

[project.scripts]
agent-control-plane = "agent_control_plane.cli:main"
acp = "agent_control_plane.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S101",   # assert allowed — we use pytest
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",  # docstrings pre-existing
    "TD001",  # todo without issue reference
    "ERA001", # commented-out code
    "FBT001", # boolean positional arg
    "FBT002", # boolean positional arg
    "FIX002", # line contains TODO
    "INP001", # implicit namespace
    "ISC001", # implicit string concat
    "EM101",  # str exception
    "EM102",  # f-string exception
    "N802",
    "N803",
    "PLR0913", # too many args
    "PLR2004", # magic value
    "S603",   # subprocess call
    "TD003",  # todo without issue
    "TRY003", # long exception message
    "G004",   # f-string in log
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",     # assert allowed in tests
    "D",        # no docstrings needed in tests
    "ANN",      # no type annotations needed in tests
    "ARG001",   # unused arguments in test fixtures
    "ARG002",   # unused arguments in test fixtures
    "PLR2004",  # magic values in tests
    "S603",     # subprocess call in tests
    "TID252",   # relative imports in tests
    "SLF001",   # accessing private members in tests
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["agent_control_plane"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.coverage.html]
directory = "coverage_html"
